# cmake_test

./: .gitignore  CMakeLists.txt
cmake/: glad.cmake  glfw.cmake  spd_log.cmake
shader/: simple.fs  simple.vs
src/: common.h  context.cpp  context.h  main.cpp  program.cpp  program.h  shader.cpp  shader.h
